turtleart.lessons.turtleart.Main.Flower2.scala.error
Source:11: error: not found: value gauhce
		gauhce(90)
                ^